infra/prod/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    - host: carreralink.live
      http:
        paths:
          - path: /api/v1/admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 9000
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - path: /api/v1/company
            pathType: Prefix
            backend:
              service:
                name: company-service
                port:
                  number: 8080
          - path: /api/v1/ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 7000
          - path: /api/v1/communication
            pathType: Prefix
            backend:
              service:
                name: communication-service
                port:
                  number: 8000
          - path: /api/v1/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 10000
          - path: /api/v1/compiler
            pathType: Prefix
            backend:
              service:
                name: compiler-service
                port:
                  number: 11000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
